--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <a href="https://twitter.com/suganton">twitter</a>
                 <a href="https://scholar.google.com/citations?user=LSobBYoAAAAJ">scholar</a>
             </div>
-            
 
             <div class="section">
                 <h2>info</h2>
@@ -37,12 +36,41 @@
         <h2>projects</h2>
         <ul class="list-items">
             <li class="list-item">
-                <span class="date">2024/03/01</span>
+                <span class="date">2025/03/01</span>
                 <a href="projects/transformer-block-coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
             </li>
             <li class="list-item">
                 <span class="date">2024/11/30</span>
                 <a href="projects/otto/" class="link">Introduction to the Otto Calculus</a>
+            </li>
+        </ul>
+    </div>
+    <p>
+        <br><br>
+    </p>
+    <div class="section">
+        <h2>papers</h2>
+        <ul class="list-items">
+            <li class="list-item">
+                <span class="date">2025</span>
+                <p>
+                    <a href="projects/transformer-block-coupling/" class="paper-link">
+                    Transformer Block Coupling and its Correlation with Generalization in LLMs
+                    </a> <br>
+                    Aubry, M.<sup>*</sup>   Meng, H.<sup>*</sup>   Sugolov, A.<sup>*</sup>   Papyan, V.  <br>
+                    ICLR 2025. <sup>*</sup><em>Equal contribution</em>
+                </p>
+            </li>
+            <li class="list-item">
+                <span class="date">2023</span>
+                <p>
+                    <a href="https://link.springer.com/article/10.1007/s12561-023-09375-9" class="paper-link">
+                        Statistical learning of large-scale genetic data: 
+                        How to run a genome-wide association study of gene-expression data using the 1000 Genomes Project
+                    </a> <br>
+                    Sugolov, A.<sup>*</sup>   Emmenegger, E.<sup>*</sup>   Paterson, A.D.  Sun, L.  <br>
+                    Statistics in Biosciences. <sup>*</sup><em>Equal contribution</em>
+                </p>
             </li>
         </ul>
     </div>
