--- a/projects/transformer-block-coupling/index.html
+++ b/projects/transformer-block-coupling/index.html
@@ -34,14 +34,14 @@
     </style>
 </head>
 <body>
-    <a href="../.." class="nav-link">← home</a>
+    <!-- <a href="../.." class="nav-link">← home</a> -->
     
     <h1>Transformer Block Coupling<br>& its Correlation with Generalization in LLMs</h1>
     <h2>
-        Murdock Aubry<sup>1</sup>, Haoming Meng<sup>1</sup>, Anton Sugolov<sup>1</sup>, Vardan Papyan
+        Murdock Aubry<sup>*</sup>, Haoming Meng<sup>*</sup>, Anton Sugolov<sup>*</sup>, Vardan Papyan
     </h2>
     <p class="footnote">
-        <sup>1</sup><em>Equal contribution</em>
+        <sup>*</sup><em>Equal contribution</em>
     </p>
     <div style="display: flex; justify-content: center;">
         <div class="project-links">
