--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>info</h2>
                 <p>
                     Hello! I'm Anton. I'm interested in all things probability, statistics, and machine learning. 
-                    Currently, I'm a Math MSc. Student at University of Toronto, supervised by Prof. Vardan Papyan.
+                    Currently, I'm a Math MSc. Student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
                     <br>
                     Let's keep in touch!
                     <br><br>
