--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="list-items">
             <li class="list-item">
                 <span class="date">2025/03/01</span>
-                <a href="projects/transformer-block-coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
+                <a href="coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
             </li>
             <li class="list-item">
                 <span class="date">2024/11/30</span>
@@ -61,7 +61,7 @@
             <li class="list-item">
                 <span class="date">2025</span>
                 <p>
-                    <a href="projects/transformer-block-coupling/" class="paper-link">
+                    <a href="coupling/" class="paper-link">
                     Transformer Block Coupling and its Correlation with Generalization in LLMs
                     </a> <br>
                     Aubry, M.<sup>*</sup>   Meng, H.<sup>*</sup>   Sugolov, A.<sup>*</sup>   Papyan, V.  <br>
