--- a/coupling/index.html
+++ b/coupling/index.html
@@ -54,7 +54,7 @@
         <div class="project-links">
           <a href="https://arxiv.org/abs/2407.07810"><b>arXiv</b></a>
           <a href="poster.pdf"><b>Poster</b></a>
-          <!-- <a href="https://github.com/sugolov/coupling"><b>GitHub</b></a> -->
+          <a href="https://github.com/sugolov/coupling"><b>GitHub</b></a> 
           <a href="https://iclr.cc/virtual/2025/poster/28555"><b>ICLR 2025</b></a>
         </div>
       </div>
