--- a/index.html
+++ b/index.html
@@ -46,15 +46,29 @@
                 <span class="date">2025/03/01</span>
                 <a href="coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
             </li>
+        </ul>
+    </div>
+    <div class="section">
+        <h2>coursework</h2>
+        <ul class="list-items">
             <li class="list-item">
                 <span class="date">2024/11/30</span>
                 <a href="projects/otto/" class="link">Introduction to the Otto Calculus</a>
             </li>
         </ul>
+        <ul class="list-items">
+            <li class="list-item">
+                <span class="date">2025/04/10</span>
+                <a href="files/mat1525.pdf" class="link">Geometry Adaptive Representations in Diffusion Models</a>
+            </li>
+        </ul>
+        <ul class="list-items">
+            <li class="list-item">
+                <span class="date">2025/04/18</span>
+                <a href="files/mat1850.pdf" class="link">Multiscale Matrix Decompositions</a>
+            </li>
+        </ul>
     </div>
-    <p>
-        <br><br>
-    </p>
     <div class="section">
         <h2>papers</h2>
         <ul class="list-items">
