--- a/coupling/index.html
+++ b/coupling/index.html
@@ -195,7 +195,7 @@ import torch
 from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig
 
 # Coupling imports
-from coupling import coupling_from_hooks, run_coupling_hf
+from coupling import run_coupling_hf
 
 model_path = "meta-llama/Meta-Llama-3-8B"
 model_name = os.path.normpath(os.path.basename(model_path))
