applied math links

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <div class="section">
                 <h2>info</h2>
                 <p>
-                    Hello! I'm Anton. I'm interested in all things probability, statistics, and machine learning. 
-                    Currently, I'm a Math MSc. Student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
-                    <br>
+                    Working on variational inference and research engineering at Extropic.
+                    Before, I was a Math Masters student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
+                    I like to think about all things probability, statistics, and machine learning. 
+                    <br><br>
                     Let's keep in touch!
                     <br><br>
                     <span class="email">asugolov[at]gmail[dot]com</span>
@@ -45,27 +46,6 @@
             <li class="list-item">
                 <span class="date">2025/03/01</span>
                 <a href="coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
-            </li>
-        </ul>
-    </div>
-    <div class="section">
-        <h2>coursework</h2>
-        <ul class="list-items">
-            <li class="list-item">
-                <span class="date">2024/11/30</span>
-                <a href="projects/otto/" class="link">Introduction to the Otto Calculus</a>
-            </li>
-        </ul>
-        <ul class="list-items">
-            <li class="list-item">
-                <span class="date">2025/04/10</span>
-                <a href="files/mat1525.pdf" class="link">Geometry Adaptive Representations in Diffusion Models</a>
-            </li>
-        </ul>
-        <ul class="list-items">
-            <li class="list-item">
-                <span class="date">2025/04/18</span>
-                <a href="files/mat1850.pdf" class="link">Multiscale Matrix Decompositions</a>
             </li>
         </ul>
     </div>
