--- a/index.html
+++ b/index.html
@@ -17,38 +17,38 @@
     <div class="header">
         <div class="content">
             <h1>Anton Sugolov</h1>
-            
+            <span class="email">asugolov[at]gmail[dot]com</span>
+
             <div class="contact-links">
                 <a href="blog" >blog</a>
                 <a href="https://github.com/sugolov">github</a>
                 <a href="https://twitter.com/suganton">twitter</a>
                 <a href="https://scholar.google.com/citations?user=LSobBYoAAAAJ">scholar</a>
             </div>
-
-            <div class="section">
-                <h2>info</h2>
-                <p>
-                    Working on variational inference and research engineering at Extropic.
-                    Before, I was a Math Masters student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
-                    I like to think about all things probability, statistics, and machine learning. 
-                    <br><br>
-                    Let's keep in touch!
-                    <br><br>
-                    <span class="email">asugolov[at]gmail[dot]com</span>
-                </p>
-            </div>
         </div>
-        <img src="files/profile3.png" alt="me" class="headshot">
+        <!-- <img src="files/profile3.png" alt="me" class="headshot"> -->
     </div>
+
     <div class="section">
         <h2>projects</h2>
         <ul class="list-items">
             <li class="list-item">
                 <span class="date">2025/03/01</span>
-                <a href="coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
+                <a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
             </li>
         </ul>
     </div>
+
+    <div class="section">
+        <br>
+        <h2>about</h2>
+        <p>
+            Currently a <b>research engineer</b> at Extropic.
+            Before, I was a <b>Math Masters</b> student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
+            I like to think about all things <b>probability</b>, <b>statistics</b>, and <b>machine learning</b>. 
+        </p>
+    </div>
+<!--
     <div class="section">
         <h2>papers</h2>
         <ul class="list-items">
@@ -75,5 +75,6 @@
             </li>
         </ul>
     </div>
+-->
 </body>
 </html>
