--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ gtag('config', 'G-G6RZ52LK6H');
 <h2>projects</h2>
 <ul class="list-items">
 <li class="list-item">
-<span class="date">2025/03/01</span>
+<span class="date">2025.02.28</span>
 <a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
 </li>
 </ul>
