--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ gtag('config', 'G-G6RZ52LK6H');
     <button onclick="toggleSimulation()" id="toggleBtn">Pause</button>
     -->
 </div>
+    Inspired by <a href="https://mattbierbaum.github.io/ising.js/">Matt Bierbaum</a>
 </div>
 
 <script>
