--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ gtag('config', 'G-G6RZ52LK6H');
 <div class="header">
 <div class="content">
 <h1>Anton Sugolov</h1>
-<span class="email">asugolov[at]gmail[dot]com</span>
+<span class="email">anton.sugolov[at]gmail[dot]com</span>
 <div class="contact-links">
 <a href="blog" >blog</a>
 <a href="https://github.com/sugolov">github</a>
