--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ gtag('config', 'G-G6RZ52LK6H');
 <br>
 </div>
 
+<h2>ising animation</h2>
 <div class="section ising-container">
 <canvas id="isingCanvas" class="ising-canvas" width="400" height="400"></canvas>
 <div class="ising-controls">
