--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@ gtag('config', 'G-G6RZ52LK6H');
 <h2>projects</h2>
 <ul class="list-items">
 <li class="list-item">
-<span class="date">2025.02.28</span>
+<span class="date">2025-02-28</span>
 <a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
 </li>
 </ul>
 </div>
+<div class="header">
 <div class="section">
 <br>
 <h2>about</h2>
@@ -100,7 +101,10 @@ gtag('config', 'G-G6RZ52LK6H');
 </p>
 <br>
 </div>
+<img src="files/profile3.png", width=250px>
+</div>
 
+<br>
 <h2>ising animation</h2>
 <div class="section ising-container">
 <canvas id="isingCanvas" class="ising-canvas" width="400" height="400"></canvas>
