--- a/index.html
+++ b/index.html
@@ -81,16 +81,10 @@ gtag('config', 'G-G6RZ52LK6H');
 </div>
 <!-- <img src="files/profile3.png" alt="me" class="headshot"> -->
 </div>
-<div class="section">
-<h2>projects</h2>
-<ul class="list-items">
-<li class="list-item">
-<span class="date">2025-02-28</span>
-<a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
-</li>
-</ul>
+
 </div>
 <div class="header">
+<img src="files/profile.png", width=250px>
 <div class="section">
 <br>
 <h2>about</h2>
@@ -101,8 +95,17 @@ gtag('config', 'G-G6RZ52LK6H');
 </p>
 <br>
 </div>
-<img src="files/profile3.png", width=225px>
 </div>
+
+
+<div class="section">
+<h2>projects</h2>
+<ul class="list-items">
+<li class="list-item">
+<span class="date">2025-02-28</span>
+<a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
+</li>
+</ul>
 
 <br>
 <h2>ising animation</h2>
