--- a/index.html
+++ b/index.html
@@ -81,30 +81,38 @@ gtag('config', 'G-G6RZ52LK6H');
 </div>
 <!-- <img src="files/profile3.png" alt="me" class="headshot"> -->
 </div>
-<div class="section">
-<h2>projects</h2>
-<ul class="list-items">
-<li class="list-item">
-<span class="date">2025.02.28</span>
-<a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
-</li>
-</ul>
+
 </div>
+<div class="header">
+<img src="files/profile.png", width=250px>
 <div class="section">
 <br>
 <h2>about</h2>
 <p>
  Currently a <b>research engineer</b> at Extropic.
- Before, I was a <b>Math Masters</b> student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
+ Before, I was a <b>Math Master's</b> student at University of Toronto, supervised by Prof. Vardan Papyan and Prof. Adrian Nachman.
  I like to think about all things <b>applied math</b>, <b>probability</b>, and <b>machine learning</b>.
 </p>
 <br>
 </div>
+</div>
 
+
+<div class="section">
+<h2>projects</h2>
+<ul class="list-items">
+<li class="list-item">
+<span class="date">2025-02-28</span>
+<a href="coupling/" class="link">ICLR 2025: Transformer Block Coupling</a>
+</li>
+</ul>
+
+<br>
+<h2>ising animation</h2>
 <div class="section ising-container">
-<canvas id="isingCanvas" class="ising-canvas" width="400" height="400"></canvas>
+<canvas id="isingCanvas" class="ising-canvas" width="700" height="400"></canvas>
 <div class="ising-controls">
-    <label>Temperature: <input type="range" id="tempSlider" min="0.5" max="5.0" step="0.1" value="2.3"></label>
+    <label>Temperature: <input type="range" id="tempSlider" min="0.25" max="5.0" step="0.1" value="2.3"></label>
     <label>Field: <input type="range" id="fieldSlider" min="-1.0" max="1.0" step="0.1" value="0.0"></label>
     <label>Speed: <input type="range" id="speedSlider" min="0.01" max="0.5" step="0.01" value="0.05"></label>
     <!--
