--- a/calendar/index.html
+++ b/calendar/index.html
@@ -21,7 +21,7 @@
 
 
   <div style="text-align: center; margin: 20px 0;">
-    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FToronto&mode=WEEK&title=Anton&showTz=0&showTitle=0&showPrint=0&src=YXN1Z29sb3ZAZ21haWwuY29t&src=ZW4uY2FuYWRpYW4jaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&src=YXN1Z29sb3ZAcXliZXIuYWk&color=%234285f4&color=%237986cb&color=%23f4511e" style="border-width:0; width: 100%; max-width: 800px;" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FToronto&mode=WEEK&title=Anton&showTz=0&showTitle=0&showPrint=0&showCalendars=0&src=YXN1Z29sb3ZAZ21haWwuY29t&src=ZW4uY2FuYWRpYW4jaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&src=YXN1Z29sb3ZAcXliZXIuYWk&color=%234285f4&color=%237986cb&color=%23f4511e" style="border-width:0; width: 100%; max-width: 800px;" height="600" frameborder="0" scrolling="no"></iframe>
   </div>
 </body>
 </html>
