--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ gtag('config', 'G-G6RZ52LK6H');
 <div class="project-authors"><a href="https://lockwo.github.io">Owen Lockwood</a>*, Anton Sugolov*</div>
 <p class="project-desc">A <a href="https://github.com/google/jax">JAX</a>/<a href="https://github.com/patrick-kidger/equinox">Equinox</a> implementation of Joint-Embedding Predictive Architecture (JEPA) models and related self-supervised learning methods.</p>
 <div class="project-links">
+<a href="blog/posts/20260211/">blog</a>
 <a href="https://github.com/sugolov/jepax">repo</a>
 </div>
 </div>
