--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@ gtag('config', 'G-G6RZ52LK6H');
 
 </div>
 <div class="header">
-<img src="files/profile.png", width=250px>
-<div class="section">
+<img src="files/profile.png" width=225px style="margin-top: 80px;"><div class="section">
 <br>
 <h2>about</h2>
-<p>
+<p style="margin-bottom: 0.1em;">
  Currently a <b>research engineer</b> at Extropic working on probabilistic ML and numerical methods for Markov chain simulation.
-<br>
+</p>
+<p style="margin-bottom: 0.1em;">
  Previously, I was a <b>Math Master's</b> student at University of Toronto, supervised by Vardan Papyan and Adrian Nachman.
-  <br>
+</p>
+<p>
   I'm broadly interested in representation learning and mathematical methods for <b>understanding empirical deep learning</b>. 
   I like to think about all things <b>applied math</b>, <b>probability</b>, and machine learning.
 </p>
@@ -87,7 +88,7 @@ gtag('config', 'G-G6RZ52LK6H');
 </div>
 </div>
 
-
+<br><br>
 <h2>notes</h2>
 <ul class="list-items">
 <li class="list-item">
