--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ gtag('config', 'G-G6RZ52LK6H');
 <div class="project-body">
 <a href="https://github.com/sugolov/jepax" class="project-title">jepax: A JAX library for JEPA research</a>
 <div class="project-authors"><a href="https://lockwo.github.io">Owen Lockwood</a>*, Anton Sugolov*</div>
-<p class="project-desc">A <a href="https://github.com/google/jax">JAX</a>/<a href="https://github.com/patrick-kidger/equinox">Equinox</a> implementation of Joint-Embedding Predictive Architecture (JEPA) models and related self-supervised learning methods.</p>
+<p class="project-desc">A <a href="https://github.com/google/jax">JAX</a>/<a href="https://github.com/patrick-kidger/equinox">Equinox</a> implementation of Joint-Embedding Predictive Architecture (JEPA) models and related self-supervised learning methods.
+Features extensible code, data parallelization, and gradient checkpointing.</p>
 <div class="project-links">
 <a href="blog/posts/20260211/">blog</a>
 <a href="https://github.com/sugolov/jepax">repo</a>
