--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ gtag('config', 'G-G6RZ52LK6H');
 </a>
 </div>
 <div class="project-body">
-<a href="https://github.com/sugolov/jepax" class="project-title">jepax: A JAX library for JEPA research</a>
+<a href="blog/posts/20260211/" class="project-title">jepax: A JAX library for JEPA research</a>
 <div class="project-authors"><a href="https://lockwo.github.io">Owen Lockwood</a>*, Anton Sugolov*</div>
 <p class="project-desc">A <a href="https://github.com/google/jax">JAX</a>/<a href="https://github.com/patrick-kidger/equinox">Equinox</a> implementation of Joint-Embedding Predictive Architecture (JEPA) models and related self-supervised learning methods.
 Features extensible code, data parallelization, and gradient checkpointing.</p>
